--- a/app/app.html
+++ b/app/app.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Electron React!</title>
+    <title>Zero House Edge</title>
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://s3.amazonaws.com/fonts.typotheque.com/WF-018717-007225.css" type="text/css" />
     <script>
       (function() {
         if (!process.env.HOT) {
@@ -16,6 +17,7 @@
     </script>
   </head>
   <body>
+
     <div id="root"></div>
     <script>
       (function() {
