working on formatting bet page

--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Zero House Edge</title>
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../node_modules/react-input-range/dist/react-input-range.min.css" />
     <link rel="stylesheet" href="https://s3.amazonaws.com/fonts.typotheque.com/WF-018717-007225.css" type="text/css" />
     <script>
       (function() {
