--- a/app/app.html
+++ b/app/app.html
@@ -5,6 +5,7 @@
     <title>Zero House Edge</title>
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://s3.amazonaws.com/fonts.typotheque.com/WF-018717-007225.css" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Raleway:700' rel='stylesheet' type='text/css'>
     <script>
       (function() {
         if (!process.env.HOT) {
